--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "devDependencies": {
     "css-loader": "^3.0.0",
     "react-id-generator": "^0.1.6",
+    "react-player": "^1.11.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-scroll": "^1.7.12",
     "react-spring": "^8.0.25",
     "style-loader": "^0.23.1"
   }
