--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^5.0.1",
     "react-scroll": "^1.7.12",
     "react-spring": "^8.0.25",
+    "react-tradingview-widget": "^1.3.0",
     "style-loader": "^0.23.1"
   }
 }
