--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
@@ -12,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,7 +34,9 @@
     "react-router-dom": "^5.0.1",
     "react-scroll": "^1.7.12",
     "react-spring": "^8.0.25",
+    "react-stripe-checkout": "^2.6.3",
     "react-tradingview-widget": "^1.3.0",
     "style-loader": "^0.23.1"
-  }
+  },
+  "homepage": "https://github.io/samuel200/bit-max"
 }
