--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
     "react-tradingview-widget": "^1.3.0",
     "style-loader": "^0.23.1"
   },
-  "homepage": "https://github.io/samuel200/bit-max"
+  "homepage": "http://samuel200.github.io/BitCoinSite/"
 }
