--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,6 +35,5 @@
     "react-stripe-checkout": "^2.6.3",
     "react-tradingview-widget": "^1.3.0",
     "style-loader": "^0.23.1"
-  },
-  "homepage": "http://samuel200.github.io/BitCoinSite/"
+  }
 }
